--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My name is sami.</title>
+    <title>My name is samiksha.</title>
 </head>
 <body>
 
