--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>My name is samiksha.</title>
+    <title>My name is sami.</title>
+     <title>My name is sam.</title
 </head>
 <body>
 
