--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My name is samiksha.</title>
     <title>My name is sami.</title>
 
-     <title>My name is sam.</title
+     <title>My name is sam.</title>
 
 
 </head>
